--- a/wh_wz_fafang.html
+++ b/wh_wz_fafang.html
@@ -46,7 +46,7 @@ option = {
     legend: {
         x : 'center',
         y : 'bottom',
-        data:['rose1','rose2','rose3','rose4','rose5','rose6','rose7','rose8']
+        data:['省疾控中心','武汉铁路局','武汉火车站 武昌火车站 汉口火车站','孝感市疾控中心','荣军医院','协和医院','武汉仁爱医院','武汉天佑医院','华中科技大学校医院']
     },
     toolbox: {
         show : true,
@@ -71,14 +71,15 @@ option = {
             center : ['50%', '50%'],
             roseType : 'area',
             data:[
-                {value:10, name:'rose1'},
-                {value:5, name:'rose2'},
-                {value:15, name:'rose3'},
-                {value:25, name:'rose4'},
-                {value:20, name:'rose5'},
-                {value:35, name:'rose6'},
-                {value:30, name:'rose7'},
-                {value:40, name:'rose8'}
+                {value:10, name:'省疾控中心'},
+                {value:5, name:'武汉铁路局'},
+                {value:15, name:'武汉火车站 武昌火车站 汉口火车站'},
+                {value:25, name:'孝感市疾控中心'},
+                {value:20, name:'荣军医院'},
+                {value:35, name:'协和医院'},
+                {value:30, name:'武汉仁爱医院'},
+                {value:40, name:'武汉天佑医院'},
+                {value:40, name:'华中科技大学校医院'}
             ]
         }
     ]
