Update and rename wh_wz_fafang.html to HB_wz_fafang.html

--- a/HB_wz_fafang.html
+++ b/HB_wz_fafang.html
@@ -46,7 +46,7 @@ option = {
     legend: {
         x : 'center',
         y : 'bottom',
-        data:['省疾控中心','武汉铁路局','武汉火车站 武昌火车站 汉口火车站','孝感市疾控中心','荣军医院','协和医院','武汉仁爱医院','武汉天佑医院','华中科技大学校医院']
+        data:['省疾控中心','武汉铁路局','武汉、武昌、汉口火车站','孝感市疾控中心','荣军医院','协和医院','武汉仁爱医院','武汉天佑医院','华中科技大学校医院']
     },
     toolbox: {
         show : true,
@@ -71,15 +71,15 @@ option = {
             center : ['50%', '50%'],
             roseType : 'area',
             data:[
-                {value:10, name:'省疾控中心'},
-                {value:5, name:'武汉铁路局'},
-                {value:15, name:'武汉火车站 武昌火车站 汉口火车站'},
-                {value:25, name:'孝感市疾控中心'},
-                {value:20, name:'荣军医院'},
-                {value:35, name:'协和医院'},
-                {value:30, name:'武汉仁爱医院'},
-                {value:40, name:'武汉天佑医院'},
-                {value:40, name:'华中科技大学校医院'}
+                {value:717.9, name:'省疾控中心'},
+                {value:3.46, name:'武汉铁路局'},
+                {value:5, name:'武汉、武昌、汉口火车站'},
+                {value:29.86, name:'孝感市疾控中心'},
+                {value:24.61, name:'荣军医院'},
+                {value:1.2, name:'协和医院'},
+                {value:18, name:'武汉仁爱医院'},
+                {value:74.7, name:'武汉天佑医院'},
+                {value:2.3, name:'华中科技大学校医院'}
             ]
         }
     ]
