--- a/HB_wz_fafang_1.html
+++ b/HB_wz_fafang_1.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 
 <html>
@@ -35,8 +33,8 @@
        // 调试页面回打印出点击的节点名称
 option = {
     title : {
-        text: '武汉红十字会物资发放情况',
-        subtext: '2020年1月31日',
+        text: '湖北省红十字会物资发放情况',
+        subtext: '2020年1月30日，第一批公示',
         x:'center'
     },
     tooltip : {
