--- a/ciyun.html
+++ b/ciyun.html
@@ -1,29 +1,18 @@
 <!DOCTYPE html>
 
-
-
 <html>
-
-
 
 <head>
 
-
-
     <meta charset="utf-8">
 
-
-
     <title>ECharts</title>
-
 
 
     <!-- 引入 echarts.js -->
 
 
-
     <script src="js/echarts.min.js"></script>
-
 
 
 </head>
@@ -32,37 +21,22 @@
 
 <body>
 
-
-
     <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
-
-
 
     <div id="main" style="width: 600px;height:400px;"></div>
 
-
-
     <script type="text/javascript">
 
-
-
         // 基于准备好的dom，初始化echarts实例
-
-
 
         var myChart = echarts.init(document.getElementById('main'));
 
 
 
-
-
-
-
         // 指定图表的配置项和数据
 
-
-
        // 调试页面回打印出点击的节点名称
+
 
 option = {
 
@@ -315,21 +289,12 @@ option = {
     }]
 
 };
+        // 使用刚指定的配置项和数据显示图表。
 
-
-
-        //
-
- myChart.setOption(option);
-
-
+        myChart.setOption(option);
 
     </script>
 
-
-
 </body>
-
-
 
 </html>
