--- a/ciyun.html
+++ b/ciyun.html
@@ -13,7 +13,7 @@
 
 
     <script src="js/echarts.min.js"></script>
-
+    <script src="https://oisanjavax.github.io/echarts-wordcloud/dist/echarts-wordcloud.min.js"></script>
 
 </head>
 
