--- a/HB_wz_laiyuan.html
+++ b/HB_wz_laiyuan.html
@@ -11,7 +11,8 @@
     <!-- 引入 echarts.js -->
 
     <script src="js/echarts.min.js"></script>
-
+    <script src="js/china.js"></script>
+    
 </head>
 
 <body>
