--- a/HB_wz_laiyuan.html
+++ b/HB_wz_laiyuan.html
@@ -19,7 +19,7 @@
 
     <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
 
-    <div id="main" style="width: 600px;height:400px;"></div>
+    <div id="main" style="width: 100%;height:100%;"></div>
 
     <script type="text/javascript">
 
