--- a/HB_wz_laiyuan.html
+++ b/HB_wz_laiyuan.html
@@ -12,6 +12,47 @@
 
     <script src="js/echarts.min.js"></script>
     <script src="js/china.js"></script>
+    <style>
+        {
+"backgroundColor": "#404a59",
++
+"color": [11],
++
+"textStyle": {fontFamily, fontSize, fontStyle},
+"animation": "auto",
+"animationDuration": 1000,
+"animationDurationUpdate": 300,
+"animationEasing": "exponentialOut",
+"animationEasingUpdate": "cubicOut",
+"animationThreshold": 2000,
+"progressiveThreshold": 3000,
+"progressive": 400,
+"hoverLayerThreshold": 3000,
+"useUTC": false,
++
+"title": [1],
++
+"geo": [1],
++
+"axisPointer": [1],
+"tooltip": [ ],
++
+"series": [2],
++
+"markArea": [1],
++
+"markLine": [1],
++
+"markPoint": [1],
+"marker": [ ],
+"visualMap": [ ],
+"dataZoom": [ ],
+"brush": [ ],
++
+"legend": [1]
+}
+    </style>
+    
     
 </head>
 
@@ -19,7 +60,7 @@
 
     <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
 
-    <div id="main" style="width: 100%;height:100%;"></div>
+    <div id="main" style="width: 100%;height:;"></div>
 
     <script type="text/javascript">
 
