--- a/HB_wz_laiyuan.html
+++ b/HB_wz_laiyuan.html
@@ -34,8 +34,40 @@
 
        // 调试页面回打印出点击的节点名称
 var allData = {
-    "citys": [],
-    "moveLines": []
+    "citys": [{
+        "name": "延寿",
+        "value": [128.331644, 45.451897, 2],
+        "symbolSize": 2,
+        "itemStyle": {
+            "normal": {
+                "color": "#F58158"
+            }
+        }
+    }, {
+        "name": "临江",
+        "value": [126.918087, 41.811979, 2],
+        "symbolSize": 2,
+        "itemStyle": {
+            "normal": {
+                "color": "#F58158"
+            }
+        }
+    }],
+    "moveLines": [{
+        "fromName": "吉林",
+        "toName":  "武汉",
+        "coords": [
+            [126.549572, 43.837883],
+            [114.305393, 30.593099]
+        ]
+    }, {
+        "fromName": "吉林",
+        "toName": "武汉",
+        "coords": [
+            [126.549572, 43.837883],
+            [114.305393, 30.593099]
+        ]
+    }]
 };
 
 option = {
