--- a/HB_wz_laiyuan.html
+++ b/HB_wz_laiyuan.html
@@ -34,25 +34,23 @@
 
        // 调试页面回打印出点击的节点名称
 var allData = {
-    "citys": [{
-        "name": "延寿",
-        "value": [128.331644, 45.451897, 2],
-        "symbolSize": 2,
-        "itemStyle": {
-            "normal": {
-                "color": "#F58158"
-            }
-        }
-    }, {
-        "name": "临江",
-        "value": [126.918087, 41.811979, 2],
-        "symbolSize": 2,
-        "itemStyle": {
-            "normal": {
-                "color": "#F58158"
-            }
-        }
-    }],
+    "citys": [{"name": 河北以岭药业有限公司 ,"value": [4.018335e+01, 1.098381e+02, 500],"symbolSize": 500,"itemStyle": {"normal": {"color": "#F58158"}}}, 
+{"name": 上海宇昂科技王宇董事长 ,"value": [3.116768e+01, 1.214323e+02, 4.900000e+00],"symbolSize": 4.900000e+00,"itemStyle": {"normal": {"color": "#F58158"}}}, 
+{"name": 杭州占戈贸易有限公司 ,"value": [3.026094e+01, 1.202186e+02, 7],"symbolSize": 7,"itemStyle": {"normal": {"color": "#F58158"}}}, 
+{"name": 江苏新农科技有限公司 ,"value": [3.253614e+01, 1.210633e+02, 76],"symbolSize": 76,"itemStyle": {"normal": {"color": "#F58158"}}}, 
+{"name": 湖北稳健集团 ,"value": [3.046372e+01, 1.149139e+02, 2.460000e+00],"symbolSize": 2.460000e+00,"itemStyle": {"normal": {"color": "#F58158"}}}, 
+{"name": 湖北稳健集团 ,"value": [3.046372e+01, 1.149139e+02, 1],"symbolSize": 1,"itemStyle": {"normal": {"color": "#F58158"}}}, 
+{"name": 中国科学院王中林院士 ,"value": [3.205475e+01, 1.187690e+02, 20],"symbolSize": 20,"itemStyle": {"normal": {"color": "#F58158"}}}, 
+{"name": 安徽惟北大鱼环保科技有限公司 ,"value": [3.186042e+01, 1.171526e+02, 5],"symbolSize": 5,"itemStyle": {"normal": {"color": "#F58158"}}}, 
+{"name": 黑龙江红十字会 ,"value": [4.572493e+01, 1.266308e+02, 110],"symbolSize": 110,"itemStyle": {"normal": {"color": "#F58158"}}}, 
+{"name": 河南省红十字会 ,"value": [3.477711e+01, 1.136863e+02, 1.493000e+01],"symbolSize": 1.493000e+01,"itemStyle": {"normal": {"color": "#F58158"}}}, 
+{"name": 河南省红十字会 ,"value": [3.477711e+01, 1.136863e+02, 1.492700e+01],"symbolSize": 1.492700e+01,"itemStyle": {"normal": {"color": "#F58158"}}}, 
+{"name": 江西华强医疗器械有限公司 ,"value": [2.822081e+01, 1.161711e+02, 4.500000e+00],"symbolSize": 4.500000e+00,"itemStyle": {"normal": {"color": "#F58158"}}}, 
+{"name": 陕西韩女士 ,"value": [3.434342e+01, 1.089390e+02, 1.200000e+00],"symbolSize": 1.200000e+00,"itemStyle": {"normal": {"color": "#F58158"}}}, 
+{"name": 天津市红十字会 ,"value": [3.912500e+01, 1.171863e+02, 2.011000e+01],"symbolSize": 2.011000e+01,"itemStyle": {"normal": {"color": "#F58158"}}}, 
+{"name": 北京森根比亚生物工程技术有限公司 ,"value": [4.036054e+01, 1.166746e+02, 36],"symbolSize": 36,"itemStyle": {"normal": {"color": "#F58158"}}}, 
+{"name": 涿州华诺救生装备有限公司 ,"value": [3.948257e+01, 1.159529e+02, 2.300000e+00],"symbolSize": 2.300000e+00,"itemStyle": {"normal": {"color": "#F58158"}}}, 
+{"name": 苏州宝集沣生物科技有限公司 ,"value": [3.128128e+01, 1.205859e+02, 5.670000e+01],"symbolSize": 5.670000e+01,"itemStyle": {"normal": {"color": "#F58158"}}}],
     "moveLines": [{
         "fromName": "吉林",
         "toName":  "武汉",
