--- a/HB_wz_laiyuan.html
+++ b/HB_wz_laiyuan.html
@@ -399,7 +399,7 @@ var allData = {
 option = {
     backgroundColor: '#ffffff',
     title: {
-        text: '湖北红十字会物资发放情况',
+        text: '湖北红十字会物资来源情况',
         left: 'center',
         textStyle: {
             color: '#404a59'
@@ -552,7 +552,7 @@ option = {
         name: '线路',
         type: 'lines',
         coordinateSystem: 'geo',
-        zlevel: 7,
+        zlevel: 12,
         large: true,
         effect: {
             show: true,
@@ -570,8 +570,8 @@ option = {
                     offset: 1,
                     color: '#F55158'
                 }], false),
-                width: 1,
-                opacity: 0.2,
+                width: 2,
+                opacity: 0.7,
                 curveness: 0.1
             }
         },
