--- a/HB_wz_laiyuan.html
+++ b/HB_wz_laiyuan.html
@@ -12,7 +12,7 @@
 
     <script src="js/echarts.min.js"></script>
     <script src="js/china.js"></script>
-
+    <script src="js/jquery.min.js"></script>
     
 </head>
 
