--- a/HB_wz_laiyuan.html
+++ b/HB_wz_laiyuan.html
@@ -417,6 +417,7 @@ option = {
     },
     geo: {
         map: 'china',
+        zoom: 2,
         label: {
             emphasis: {
                 show: false
